[package]
name = "rusty"
version = "0.1.0"
edition = "2024"


[dependencies]
anyhow = "1.0.97"
axum = { version = "0.8.1", features = ["macros", "json"] }
axum-server = "0.7.2"
candle-core = "0.8.4"
candle-nn = "0.8.4"
candle-transformers = "0.8.4"
env_logger = "0.11.7"
hf-hub = "0.4.2"
hyper = "1.6.0"
log = "0.4.27"
once_cell = "1.21.3"
rand = "0.9.0"
rand_distr = "0.5.1"
reqwest = { version = "0.12.15", features = ["json"]}
serde = { version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
smartcore = "0.4.0"
tokenizers = "0.21.1"
tokio = { version = "1.44.1", features = ["full"]}
url = "2.5.4"
